force-app/main/default/objects/FieldMapping__c/FieldMapping__c.object-meta.xml
<CustomObject>
    <label>FieldMapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>FieldMapping名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>