force-app/main/default/objects/FieldMapping__c/fields/BizFieldLabel__c.field-meta.xml
<CustomField>
    <fullName>BizFieldLabel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BizFieldLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>