force-app/main/default/objects/FieldMapping__c/fields/BizFieldName__c.field-meta.xml
<CustomField>
    <fullName>BizFieldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BizFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>