force-app/main/default/objects/FieldMapping__c/fields/BizFieldType__c.field-meta.xml
<CustomField>
    <fullName>BizFieldType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BizFieldType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>