force-app/main/default/objects/FieldMapping__c/fields/BizTableName__c.field-meta.xml
<CustomField>
    <fullName>BizTableName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BizTableName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>