force-app/main/default/objects/FieldMapping__c/fields/DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>DefaultValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DefaultValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>