force-app/main/default/objects/FieldMapping__c/fields/ExtIdFieldName__c.field-meta.xml
<CustomField>
    <fullName>ExtIdFieldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ExtIdFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>