force-app/main/default/objects/FieldMapping__c/fields/FormatAfterTrans_c__c.field-meta.xml
<CustomField>
    <fullName>FormatAfterTrans_c__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FormatAfterTrans__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>