force-app/main/default/objects/FieldMapping__c/fields/InterfaceFieldName__c.field-meta.xml
<CustomField>
    <fullName>InterfaceFieldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>InterfaceFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>