force-app/main/default/objects/FieldMapping__c/fields/InterfaceTableName__c.field-meta.xml
<CustomField>
    <fullName>InterfaceTableName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>InterfaceTableName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>