force-app/main/default/objects/FieldMapping__c/fields/IsSObject__c.field-meta.xml
<CustomField>
    <fullName>IsSObject__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsSObject</label>
    <type>Checkbox</type>
</CustomField>