force-app/main/default/objects/FieldMapping__c/fields/SchemaPicklistValidation__c.field-meta.xml
<CustomField>
    <fullName>SchemaPicklistValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SchemaPicklistValidation</label>
    <type>Checkbox</type>
</CustomField>