force-app/main/default/objects/FieldMapping__c/fields/StrictPicklist__c.field-meta.xml
<CustomField>
    <fullName>StrictPicklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>StrictPicklist</label>
    <type>Checkbox</type>
</CustomField>