force-app/main/default/objects/FieldMapping__c/fields/TempText__c.field-meta.xml
<CustomField>
    <fullName>TempText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TempText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>